--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </main>
     <footer>
 
-        produzido por hectorprasma
+        produzido por hectorprasma e anajuzika
     </footer>
     <script src='graficos/informacoesGlobais.js'> </script>
 
