--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
         </nav>
     </header>
     <main>
+<section class = "graficos-container" id=" graficos-container">
 
+</section>
 
     </main>
     <footer>
