--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
         </nav>
     </header>
     <main>
-<section class = "graficos-container" id=" graficos-container">
+<section class = "graficos-container" id="graficos-container">
 
 </section>
 
     </main>
     <footer>
 
-        produzido por hectorprasma e anajuzika
+        produzido por hectorplasma e anajuzika
     </footer>
     <script src='graficos/informacoesGlobais.js'> </script>
 
