--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>bigZ</title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://cdn.plot.ly/plotly-2.27.0.min.js" charset="utf-8"></script>
 </head>
 
 <body>
@@ -28,6 +29,7 @@
         produzido por hectorplasma e anajuzika
     </footer>
     <script src='graficos/informacoesGlobais.js'> </script>
+    <script src="graficos/quantidadeDeUsuarios.js"></script>
 
 </body>
 
