--- a/index.html
+++ b/index.html
@@ -28,9 +28,10 @@
 
         produzido por hectorplasma e anajuzika
     </footer>
-    <script src='graficos/informacoesGlobais.js'> </script>
-    <script src="graficos/quantidadeDeUsuarios.js"></script>
-
+    <script type="module" src="graficos/comun.js"></script>
+    <script type="module" src="graficos/informacoesGlobais.js"> </script>
+    <script type="module" src="graficos/quantidadeDeUsuarios.js"></script>
+                    
 </body>
 
 </html>
